<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCream"
    tools:context=".RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/registration_image"
                android:layout_width="match_parent"
                android:layout_height="300sp"
                android:src="@drawable/people_group"
                />

            <EditText
                android:id="@+id/registration_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_below="@id/registration_image"
                android:layout_marginTop="10sp"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                android:background="@drawable/email_layout"
                android:hint="@string/e_mail"
                android:textSize="20sp"
                android:padding="10sp"
                android:fontFamily="@font/fredoka_one"
                android:textColor="@color/colorBlue"
                />

            <EditText
                android:id="@+id/registration_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/registration_email"
                android:background="@drawable/password_layout"
                android:padding="10sp"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/fredoka_one"
                android:textColor="@color/colorBlue"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textSize="20sp"
                />

            <Button
                android:id="@+id/create_account_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/registration_password"
                android:layout_marginTop="20sp"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:text="@string/create_account"
                android:background="@drawable/login_button_layout"
                android:textColor="@color/colorCream"
                android:padding="10sp"
                android:fontFamily="@font/fredoka_one"
                android:textSize="25sp"
                />

            <TextView
                android:id="@+id/already_have_an_account_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/create_account_button"
                android:layout_marginBottom="10sp"
                android:text="@string/already_have_an_account"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:padding="10sp"
                android:fontFamily="@font/fredoka_one"
                android:textSize="18sp"
                android:textColor="@color/colorBlue"
                />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>