<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".PhoneLoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/phone_login_image"
                android:layout_width="match_parent"
                android:layout_height="300sp"
                android:src="@drawable/pessoas_juntando_pecas_de_quebra_cabeca"
                />

            <EditText
                android:id="@+id/phone_login_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_login_image"
                android:background="@drawable/email_layout"
                android:layout_marginTop="10sp"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                android:padding="10sp"
                android:hint="@string/phone_number"
                android:textSize="20sp"
                android:fontFamily="@font/fredoka_one"
                android:inputType="phone"
                android:textColor="@color/colorBlue"
                />

            <EditText
                android:id="@+id/phone_login_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_login_number"
                android:background="@drawable/password_layout"
                android:layout_marginTop="10sp"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                android:padding="10sp"
                android:hint="@string/verification_code"
                android:textSize="20sp"
                android:fontFamily="@font/fredoka_one"
                android:inputType="text"
                android:textColor="@color/colorBlue"
                />

            <Button
                android:id="@+id/phone_login_send_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_login_code"
                android:layout_marginTop="20sp"
                android:layout_marginLeft="40sp"
                android:layout_marginRight="40sp"
                android:text="@string/send_verification_code"
                android:background="@drawable/login_button_layout"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/fredoka_one"
                android:textSize="20sp"
                android:padding="10sp"
                />

            <Button
                android:id="@+id/phone_login_check_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_login_send_code"
                android:layout_marginTop="10sp"
                android:layout_marginLeft="35sp"
                android:layout_marginRight="35sp"
                android:layout_marginBottom="20sp"
                android:text="@string/check_verification_code"
                android:background="@drawable/login_button_layout"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/fredoka_one"
                android:textSize="20sp"
                android:padding="10sp"
                />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>