<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".AddTaskActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70sp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/add_todo_image"
                android:layout_width="match_parent"
                android:layout_height="300sp"
                android:src="@drawable/group_people_working_together"
                />

            <EditText
                android:id="@+id/add_todo_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                android:layout_below="@id/add_todo_image"
                android:padding="10sp"
                android:background="@drawable/todo_name_layout"
                android:fontFamily="@font/fredoka_one"
                android:hint="@string/name"
                android:textSize="20sp"
                android:textColor="@color/colorBlue"
                />

            <EditText
                android:id="@+id/add_todo_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                android:layout_below="@id/add_todo_name"
                android:padding="10sp"
                android:background="@drawable/todo_description_layout"
                android:fontFamily="@font/fredoka_one"
                android:hint="@string/description"
                android:textSize="20sp"
                android:textColor="@color/colorOrange"
                />

            <Button
                android:id="@+id/add_todo_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_todo_description"
                android:layout_marginTop="20sp"
                android:layout_marginLeft="70sp"
                android:layout_marginRight="70sp"
                android:layout_marginBottom="20sp"
                android:padding="10sp"
                android:text="@string/add_todo"
                android:textColor="@color/colorCream"
                android:fontFamily="@font/fredoka_one"
                android:textSize="20sp"
                android:background="@drawable/add_todo_button_layout"
                />

        </RelativeLayout>
    </ScrollView>

    <include
        android:id="@+id/bottom_menu"
        layout="@layout/bottom_app_menu" />

</RelativeLayout>