<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorCream"
    tools:context=".ItemActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/fredoka_one"
                android:textSize="40sp"
                android:textColor="@color/colorBlue"
                android:gravity="center"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:layout_below="@id/item_name"
                android:textColor="#508BF1"
                android:fontFamily="@font/fredoka_one"
                android:textSize="30sp"
                />

            <LinearLayout
                android:id="@+id/item_actions"
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:layout_marginTop="20sp"
                android:layout_below="@id/item_description"
                android:weightSum="2"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/item_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20sp"
                    android:layout_weight="1"
                    android:src="@drawable/edit" />

                <ImageView
                    android:id="@+id/item_delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20sp"
                    android:layout_weight="1"
                    android:src="@drawable/delete" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_actions_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_actions"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/edit_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_task"
                    android:gravity="center"
                    android:fontFamily="@font/fredoka_one"
                    android:textSize="25sp"
                    android:textColor="@color/colorBlue"
                    />

                <TextView
                    android:id="@+id/delete_task_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delete_task"
                    android:gravity="center"
                    android:fontFamily="@font/fredoka_one"
                    android:textSize="25sp"
                    android:textColor="@color/colorBlue"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_action_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:layout_marginBottom="20sp"
                android:layout_below="@id/item_actions_link"
                android:weightSum="2"
                android:visibility="invisible"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/name"
                    android:fontFamily="@font/fredoka_one"
                    android:background="@drawable/todo_name_layout"
                    android:padding="10sp"
                    android:layout_marginLeft="50sp"
                    android:layout_marginRight="50sp"
                    android:textSize="25sp"
                    android:textColor="@color/colorBlue"
                    />

                <EditText
                    android:id="@+id/edit_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="50sp"
                    android:layout_marginRight="50sp"
                    android:background="@drawable/todo_name_layout"
                    android:padding="10sp"
                    android:hint="@string/description"
                    android:fontFamily="@font/fredoka_one"
                    android:textSize="25sp"
                    android:textColor="@color/colorBlue"
                    />

                <Button
                    android:id="@+id/edit_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:layout_marginLeft="70sp"
                    android:layout_marginRight="70sp"
                    android:text="@string/save_changes"
                    android:textColor="@color/colorCream"
                    android:fontFamily="@font/fredoka_one"
                    android:textSize="25sp"
                    android:background="@drawable/add_todo_button_layout"
                    />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <include
        android:id="@+id/bottom_menu"
        layout="@layout/bottom_app_menu" />

</RelativeLayout>