<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/login_image"
                android:layout_width="match_parent"
                android:layout_height="300sp"
                android:src="@drawable/personas_balcones"
                />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_below="@id/login_image"
                android:background="@drawable/email_layout"
                android:padding="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                android:hint="@string/e_mail"
                android:fontFamily="@font/fredoka_one"
                android:textSize="20sp"
                android:textColor="@color/colorBlue"
                />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_email"
                android:background="@drawable/password_layout"
                android:padding="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:fontFamily="@font/fredoka_one"
                android:textSize="20sp"
                android:textColor="@color/colorBlue"
                />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_password"
                android:layout_marginTop="20sp"
                android:fontFamily="@font/fredoka_one"
                android:textColor="@color/colorWhite"
                android:background="@drawable/login_button_layout"
                android:layout_marginLeft="70sp"
                android:layout_marginRight="70sp"
                android:textSize="25sp"
                android:text="@string/login"

                />

            <TextView
                android:id="@+id/need_new_account_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/need_new_account"
                android:layout_below="@id/login_button"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:gravity="center"
                android:fontFamily="@font/fredoka_one"
                android:textColor="@color/colorBlue"
                android:textSize="17sp"
                />

            <!--

            <TextView
                android:id="@+id/or"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/need_new_account_link"
                android:textSize="15sp"
                android:text="or"
                android:gravity="center"
                android:fontFamily="@font/fredoka_one"
                android:textColor="#7C7C7D"
                />

            <TextView
                android:id="@+id/login_using_your"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login_using_your"
                android:layout_below="@id/or"
                android:layout_marginTop="5sp"
                android:gravity="center"
                android:textColor="@color/colorBlue"
                android:fontFamily="@font/fredoka_one"
                android:textSize="17sp"
                />

            <Button
                android:id="@+id/login_phone_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/login_using_your"
                android:background="@drawable/login_button_layout"
                android:layout_marginTop="10sp"
                android:layout_marginLeft="70sp"
                android:layout_marginRight="70sp"
                android:layout_marginBottom="20sp"
                android:text="@string/phone"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/fredoka_one"
                android:textSize="25sp"
                />

                -->

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>